# Copyright (c) 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/symlink.gni")

if (current_toolchain == host_toolchain) {
executable("bluetooth_metrics_hash") {
  sources = [
    "bluetooth_metrics_hash.cc",
  ]

  deps = [
    "//base",
    "//device/bluetooth",
  ]
}
} else {
  # Aliases for compatibility with GYP.
  binary_symlink("bluetooth_metrics_hash") {
    binary_label = ":$target_name($host_toolchain)"
    binary_output_name = "bluetooth_metrics_hash"
  }
}
